# scomhunter

./: .gitignore  LICENSE  MSSQL_RELAY_CHANGES.md  README.md  pyproject.toml  requirements.txt  scomhunter.py  test.py
lib/: ldap.py  logger.py  sessions.py
lib/attacks/: dpapi.py  find.py  http_relay.py  mssql.py  mssql_relay.py  relay.py
lib/commands/: dpapi.py  find.py  http.py  mssql.py  relay.py
lib/scripts/: banner.py  dpapi.py  helpers.py
