[project]
name = "scomhunter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosmb>=0.4.14",
    "asyncio>=4.0.0",
    "datetime>=6.0",
    "impacket>=0.13.0",
    "msldap>=0.5.15",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
]
